[gd_scene load_steps=21 format=3 uid="uid://cccedwdy5ljis"]

[ext_resource type="Texture2D" uid="uid://bo8jdfspekdjj" path="res://assets/sprites/reimu.png" id="1_amfaw"]
[ext_resource type="Script" path="res://scenes/gameplay/player.gd" id="1_s4psi"]
[ext_resource type="Texture2D" uid="uid://bk0wfg8no5pkw" path="res://assets/sprites/PC Computer - Touhou Youyoumu Perfect Cherry Blossom - Projectiles & Objects.png" id="2_2r7a3"]
[ext_resource type="Texture2D" uid="uid://610fg6jjl2u2" path="res://assets/sprites/PC Computer - Touhou Youyoumu Perfect Cherry Blossom - Characters.png" id="4_cvlly"]
[ext_resource type="Script" path="res://scripts/simplerotate.gd" id="5_7c7v7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3mxkh"]
atlas = ExtResource("1_amfaw")
region = Rect2(0, 0, 32, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_1v553"]
atlas = ExtResource("1_amfaw")
region = Rect2(32, 0, 32, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7eiu"]
atlas = ExtResource("1_amfaw")
region = Rect2(64, 0, 32, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_5n7fb"]
atlas = ExtResource("1_amfaw")
region = Rect2(96, 0, 32, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjus3"]
atlas = ExtResource("1_amfaw")
region = Rect2(128, 45, 32, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_de4kl"]
atlas = ExtResource("1_amfaw")
region = Rect2(160, 45, 32, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8qar"]
atlas = ExtResource("1_amfaw")
region = Rect2(192, 45, 32, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_er3wf"]
atlas = ExtResource("1_amfaw")
region = Rect2(0, 45, 32, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwkm7"]
atlas = ExtResource("1_amfaw")
region = Rect2(32, 45, 32, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8qm1"]
atlas = ExtResource("1_amfaw")
region = Rect2(64, 45, 32, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jlyn"]
atlas = ExtResource("1_amfaw")
region = Rect2(96, 45, 32, 45)

[sub_resource type="SpriteFrames" id="SpriteFrames_qps5x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mxkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1v553")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7eiu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5n7fb")
}],
"loop": true,
"name": &"idle",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjus3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_de4kl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8qar")
}],
"loop": true,
"name": &"move",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_er3wf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwkm7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8qm1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jlyn")
}],
"loop": true,
"name": &"toMove",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_f3n5x"]
radius = 4.0

[sub_resource type="AtlasTexture" id="AtlasTexture_5x8go"]
atlas = ExtResource("2_2r7a3")
region = Rect2(8, 249, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsd53"]
atlas = ExtResource("4_cvlly")
region = Rect2(126, 17, 16, 15)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_s4psi")
shooting_delay = 0.1

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qps5x")
animation = &"idle"
frame_progress = 0.104888

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_f3n5x")

[node name="HitboxSprite" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_5x8go")

[node name="Timer" type="Timer" parent="."]

[node name="SFXPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="RightBall" type="Sprite2D" parent="."]
position = Vector2(22, 0)
texture = SubResource("AtlasTexture_bsd53")
script = ExtResource("5_7c7v7")
speed = 2.0

[node name="LeftBall" type="Sprite2D" parent="."]
position = Vector2(-22, 0)
texture = SubResource("AtlasTexture_bsd53")
script = ExtResource("5_7c7v7")
speed = 2.0

[connection signal="timeout" from="Timer" to="." method="timer_ended"]
